--- a/FI800Scan/FormSoftIPC.resx
+++ b/FI800Scan/FormSoftIPC.resx
@@ -50,7 +50,9 @@
     
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : System.
+            
+time.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
